plugins {
    id 'java'
    id 'com.gradleup.shadow' version '8.3.6'
}

group = 'me.lulu'
version = '1.0.0-alpha-2'

def foundationVersion = '6.0.8'
def useLocalFoundation = project.hasProperty('useLocalFoundation')
def localFoundationJar = file("../lib-foundation/target/Foundation-${foundationVersion}.jar")

java {
    toolchain {
        languageVersion = JavaLanguageVersion.of(21)
    }
}

processResources {
    filesMatching('plugin.yml') {
        expand 'pluginVersion': project.version
    }
}

shadowJar {
    relocate("org.mineacademy", "org.mcwonderland.uhc.lib.mineacademy")
    relocate("org.apache", "org.mcwonderland.uhc.lib.apache")
    archiveClassifier.set("")
}

repositories {
    mavenLocal()
    mavenCentral()
    flatDir { dir("./libs") }

    maven { url 'https://jitpack.io' }

    maven {
        name 'm2-dv8tion'
        url 'https://m2.dv8tion.net/releases'
    }
    maven { url 'https://nexus.scarsz.me/content/groups/public/' }


    maven { url 'https://hub.spigotmc.org/nexus/content/repositories/snapshots/' }
    maven { url 'https://oss.sonatype.org/content/groups/public/' }
    maven { url 'https://repo.papermc.io/repository/maven-public/' }

    if (project.hasProperty('useNaluwanRepo')) {
        maven {
            name = "naluwan"
            url = uri("https://repo.naluwan.net/public-snapshot")
        }
    }
}

dependencies {
    if (useLocalFoundation) {
        implementation files(localFoundationJar)
    } else {
        // Default to the public JitPack artifact to make clean setups work.
        implementation("com.github.kangarko:Foundation:${foundationVersion}") {
            // Foundation POM still references private/legacy optional hooks.
            // We only need the main Foundation jar for this plugin.
            transitive = false
        }
    }
    implementation 'com.github.lulu2002:DatouNms:1.2.2'

    compileOnly 'com.discordsrv:discordsrv:1.25.1'

    compileOnly name: 'PacketListenerAPI_v3.7.9-SNAPSHOT'

    compileOnly name: 'custom-ore-generator-2022.06.11'
    compileOnly 'com.github.Brettflan:WorldBorder:44f388f3ba'

    compileOnly 'org.spigotmc:spigot-api:1.16.5-R0.1-SNAPSHOT'

    implementation 'commons-lang:commons-lang:2.6'

    // Lombok
    compileOnly 'org.projectlombok:lombok:1.18.44'
    annotationProcessor 'org.projectlombok:lombok:1.18.44'

    testCompileOnly 'org.projectlombok:lombok:1.18.44'
    testAnnotationProcessor 'org.projectlombok:lombok:1.18.44'

    testImplementation 'org.spigotmc:spigot-api:1.16.5-R0.1-SNAPSHOT'
    testImplementation 'com.github.seeseemelk:MockBukkit-v1.16:1.5.2'

    testImplementation 'junit:junit:4.13'
}

test {
    useJUnit()

    maxHeapSize = '1G'
}

configurations {
    testCompileOnly.extendsFrom compileOnly
}

tasks.withType(JavaCompile).configureEach {
    options.release.set(21)
    options.forkOptions.jvmArgs.addAll(['--add-opens', 'jdk.compiler/com.sun.tools.javac.code=ALL-UNNAMED'])
}
